--- a/vps.conf
+++ b/vps.conf
@@ -1,9 +1,9 @@
 server {
   listen       81;
   server_name  127.0.0.1 localhost;
-  access_log /var/log/nginx/vps-access.log;
-  error_log /var/log/nginx/vps-error.log error;
-  root   /home/vps/public_html;
+  access_log /var/log/nginx/www-access.log;
+  error_log /var/log/nginx/www-error.log error;
+  root   /home/www/public_html;
 
   location / {
     index  index.html index.htm index.php;
