--- a/vps.conf
+++ b/vps.conf
@@ -1,7 +1,7 @@
 server {
   listen       81;
   listen [::]:81;
-  server_name  127.0.0.1 localhost *.sshocean.net *.vpnhack.com;
+  server_name  127.0.0.1 localhost;
   access_log /var/log/nginx/www-access.log;
   error_log /var/log/nginx/www-error.log error;
   root   /home/www/public_html;
